--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
   <h1>My Audio Files</h1>
   <p>Welcome! Here’s a link to my audio file:</p>
-  <a href="Boyfriend Chromatic Scale.wav">Download Boyfriend Chromatic Scale.wav</a>
+  <a href="sample.wav">Download sample.wav</a>
 </body>
 </html>
